--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="start_discovery_text">start Discovery</string>
     <string name="stop_discovery_text">stop Discovery</string>
     <string name="disconnect_text">Disconnect</string>
+    <string name="start_record">Start Record</string>
 </resources>
