--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="stop_discovery_text">stop Discovery</string>
     <string name="disconnect_text">Disconnect</string>
     <string name="start_record">Start Record</string>
+    <string name="dialog">dialog</string>
 </resources>
